# direct-cocoa

MetadataIn/: Main.hs  MetadataIn.cabal  notes.txt
TranslateAPI/: BridgeSupport.hs  LICENSE  LibFFI.hs  Main.hs  Paths.hs  Reflection.hs  TranslateAPI.cabal  Types.hs  Util.hs
